Add Twilio API beginning text msgs

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+
+TWILIO_ACCOUNT_SID='...'; # Your Account SID from www.twilio.com/console
+TWILIO_AUTH_TOKEN='...'; # Your Auth Token from www.twilio.com/console
+
