--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "twilio": "^4.8.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
