Rename to .ts to help build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs"
-, "src/pages/api/sms.js"  ],
+, "src/pages/api/sms.ts"  ],
   "exclude": ["node_modules"]
 }
